condensed files to use fewer layouts. started adding technique information

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BrickHack4App</string>
+    <string name="techniqueName">TechniqueName</string>
 </resources>
